<resources>
    <string name="app_name">Mastro</string>
    <string name="login_email_hint">Email Or Phone</string>
    <string name="login_password_hint">Password</string>
    <string name="Welcome_Note">Welcome in our app</string>
    <string name="Dating">Dating</string>
    <string name="Register">Register</string>
    <string name="Repeat_Password">Confirm Password</string>
    <string name="Slogan">We Guarantee you to find best match for you</string>
    <string name="fullname">FullName</string>
    <string name="gender">Gender :</string>
    <string name="female">Female</string>
    <string name="lesbian">Lesbian</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="signup_using_google">Signup using Google</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="new_user_register_now">New user? Register Now</string>
    <string name="nice_to_see_you_again">Nice to see you again !</string>
    <string name="welcome">Welcome</string>
    <string name="signin_with">Sign In with</string>
    <string name="help">Help?</string>
    <string name="Profile_Creator">Profile Creator</string>
    <string name="Bride">Bride/Groom</string>
    <string name="Account_Created_By">Select who is creating profile</string>
    <string name="Build">Build Your Date Profile Here</string>
    <string name="Profile_slogan">Fill data Properly to find Perfect Match</string>
    <string name="birthday">Date of Birth</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="nickname">Nickname</string>
    <string name="Bio">BIO</string>
    <string name="Education">Education</string>
    <string name="Build_Matrimony">Build Your Matrimony Profile Here</string>
    <string name="Physicallyabled">Health Condition</string>
    <string name="Job">Job</string>
    <string name="Height">Height</string>
    <string name="Family_Status">Family Status</string>
    <string name="bio">Bio</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="update">Update</string>
    <string name="likes">Likes</string>
    <string name="matches">Matches</string>
    <string name="likes_req">Requests</string>
    <string name="back">Back</string>
    <string name="done">Done</string>
    <string name="motherTongue">Mother Tongue</string>
    <string name="religion">Religion</string>
    <string name="HomeTown">Home Town</string>
    <string name="HairColor">Hair Color</string>
    <string name="EyeColor">Eye Color</string>
    <string name="Country">Country</string>
    <string name="FamilySize">Family Size</string>
    <string name="FamilyIncome">Family Income</string>
    <string name="Sports">Sports</string>
    <string name="Music_Genre">Music Genre</string>
    <string name="Food">Food</string>
    <string name="Book">Book</string>
    <string name="Movie">Movies</string>
    <string name="TVshows">TV Show</string>
    <string name="Series">Series</string>
    <string name="Color">Color</string>
    <string name="Other">Other</string>
    <string name="Date">Date</string>
    <string name="matrimony">Matrimony</string>
    <string name="waiting_description">Waiting to automatically detect an \n SMS sent to your mobile number</string>
    <string name="countryCode">+977</string>
    <string name="invalidOTP">Invalid OTP</string>
    <string name="donotreceivecode">"Didn't receieve the code? "</string>
    <string name="resend">RESEND CODE</string>
    <string name="verify">Verify</string>
    <string name="interest">Interest</string>
    <string name="home">Home</string>
    <string name="trending">Trending</string>
    <string name="astro">Astro</string>
    <string name="notif">Notification</string>
    <string name="setting">Settings</string>
    <string name="my_acc">My Account</string>
    <string name="switch_acc">Switch Account</string>
    <string name="notification_sound">Notification And Sound</string>
    <string name="feature">Feature</string>
    <string name="magic_search">Magic Search</string>
    <string name="premium">Premium</string>
    <string name="tut">Tutorial</string>
    <string name="report">Report</string>
    <string name="terms">Terms and Conditions</string>
    <string name="logout">Log Out</string>
    <string name="matrimony_premium">Matrimony Pay $10/month</string>
    <string name="matrimony_premium_desc">You can take monthly subscription for matrimony from here.\nNo other charges will be taken, you are free to do whatever you like after you registered into Matrimony</string>
    <string name="date_premium">Upgrade Date Account\nPay 2$/month</string>
    <string name="date_premium_desc">After upgrade your account will be reached to maximum number of users and more random users will be shown to you</string>
    <string name="active_status">Active Status</string>
    <string name="ch_email_phone">Change Email Or Phone</string>
    <string name="ch_pass">Change Password</string>
    <string name="block">Block</string>
    <string name="sensitive_setting">Sensitive Settings</string>
    <string name="acc_visibility">Account Visibility</string>
    <string name="deactivate_acc">Deactivate Account</string>
    <string name="deactivate_acc_acc_perm">Delete Account Permanently</string>
    <string name="sound">Sound</string>
    <string name="ch_email_phone_instruction">Change E-mail or phone Number.</string>
    <string name="ch">Change</string>
    <string name="new_pass">New Password</string>
    <string name="current_pass">Current Password</string>
    <string name="block_stat">This is the list of people whom you have bocked.\nYou can unblock any user from here and can add any of your matches user to block list</string>
    <string name="add_user_to_block">+ add user to blocklist</string>
    <string name="unblock">unblock user</string>
    <string name="msg_opt">Message Options</string>
    <string name="search">Search</string>
    <string name="ignore_msg">Ignore Message</string>
    <string name="view_profile">View Profile</string>
    <string name="del_conv">Delete Conversation</string>
    <string name="unmatch">Unmatch</string>
    <string name="let_chat">Lets Chat</string>
    <string name="enter_pass">Enter Password</string>
    <string name="ok">OK</string>
    <string name="view_ph">View Photo</string>
    <string name="take_ph">Take Photo</string>
    <string name="choose_ph">Choose Photo</string>
    <string name="del_ph">Delete Photo</string>
    <string name="Drink">Drink</string>
    <string name="Smoke">Smoke</string>
    <string name="Travel">Travel</string>
    <string name="Iam">"I am "</string>
    <string name="about">About</string>
    <string name="height">Height</string>
    <string name="education">Education</string>
    <string name="income">Income</string>
    <string name="hometown">Home Town</string>
    <string name="job">Job</string>
    <string name="family">Family</string>
    <string name="hobby_habit">Hobbies and Habit</string>
    <string name="drink">Drink</string>
    <string name="smoke">Smoke</string>
    <string name="i_am">I am a</string>
    <string name="travel">Travel</string>
    <string name="sport">Sport</string>
    <string name="food">Food</string>
    <string name="movies">Movies</string>
    <string name="series">Series</string>
    <string name="tvshow">TV Show</string>
    <string name="color">Color</string>
    <string name="family_type">FamilyType</string>
    <string name="from">From</string>
    <string name="type_msg">Type Message</string>
    <string name="notification">Notification</string>
    <string name="want_call">Want Call</string>
    <string name="set_nickname">Set Nickname</string>
    <string name="msg_setting">Message Settings</string>
    <string name="details">Details</string>
    <string name="perm_loc">Permanent Location</string>
    <string name="email_phone">Email or Phone</string>
    <string name="signup_using_fb">Signin using facebook</string>
    <string name="signin_using_google">Signin using Facebook</string>
    <string name="family_size">Family Size</string>
    <string name="male">Male</string>
    <string name="basic">Basics</string>
    <string name="hobbies">Hobbies</string>
    <string name="preference">Preferences</string>
    <string name="skip">Skip</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>