<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout style="@style/viewProfileBox"
        android:layout_marginBottom="15dp">

        <TextView
            style="@style/viewProfileTitle"
            android:text="@string/about" />

        <LinearLayout style="@style/viewProfileInnerBox">

            <TextView
                style="@style/viewProfileInnerTitle"
                android:text="@string/height" />

            <EditText
                android:id="@+id/mPPHeight"
                style="@style/myProfileData" />
        </LinearLayout>

        <LinearLayout style="@style/viewProfileInnerBox">

            <TextView
                style="@style/viewProfileInnerTitle"
                android:text="@string/education" />

            <EditText
                android:id="@+id/mPPEducation"
                style="@style/myProfileData" />
        </LinearLayout>

        <LinearLayout style="@style/viewProfileInnerBox">

            <TextView
                style="@style/viewProfileInnerTitle"
                android:text="@string/income" />

            <EditText
                android:id="@+id/mPPIncome"
                style="@style/myProfileData" />
        </LinearLayout>

        <LinearLayout style="@style/viewProfileInnerBox">

            <TextView
                style="@style/viewProfileInnerTitle"
                android:text="@string/from" />

            <EditText
                android:id="@+id/mPPFrom"
                style="@style/myProfileData" />
        </LinearLayout>

        <LinearLayout style="@style/viewProfileInnerBox">

            <TextView
                style="@style/viewProfileInnerTitle"
                android:text="@string/job" />

            <EditText
                android:id="@+id/mPPJob"
                style="@style/myProfileData" />
        </LinearLayout>

        <LinearLayout style="@style/viewProfileInnerBox">

            <TextView
                style="@style/viewProfileInnerTitle"
                android:text="@string/motherTongue" />

            <EditText
                android:id="@+id/mPPMotherTongue"
                style="@style/myProfileData" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout style="@style/viewProfileBox"
        android:layout_marginBottom="15dp">

        <TextView
            style="@style/viewProfileTitle"
            android:text="@string/family" />

        <LinearLayout style="@style/viewProfileInnerBox">

            <TextView
                style="@style/viewProfileInnerTitle"
                android:text="@string/religion" />

            <EditText
                android:id="@+id/mPPReligion"
                style="@style/myProfileData" />
        </LinearLayout>

        <LinearLayout style="@style/viewProfileInnerBox">

            <TextView
                style="@style/viewProfileInnerTitle"
                android:text="@string/family_type" />

            <EditText
                android:id="@+id/mPPFamilyType"
                style="@style/myProfileData" />
        </LinearLayout>

        <LinearLayout style="@style/viewProfileInnerBox">

            <TextView
                style="@style/viewProfileInnerTitle"
                android:text="@string/Family_Status" />

            <EditText
                android:id="@+id/mPPFamilyStatus"
                style="@style/myProfileData" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout style="@style/viewProfileBox"
        android:layout_marginBottom="15dp">

        <TextView
            style="@style/viewProfileTitle"
            android:text="@string/hobby_habit" />

        <LinearLayout
            style="@style/viewProfileInnerBox"
            android:orientation="vertical">

            <TextView
                style="@style/viewProfileInnerTitle"
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/i_am"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/mPPCharacter"
                style="@style/myProfileData"
                android:gravity="center_horizontal"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout style="@style/viewProfileInnerBox">

            <TextView
                style="@style/viewProfileInnerTitle"
                android:text="@string/drink" />

            <EditText
                android:id="@+id/mPPDrink"
                style="@style/myProfileData" />
        </LinearLayout>

        <LinearLayout style="@style/viewProfileInnerBox">

            <TextView
                style="@style/viewProfileInnerTitle"
                android:text="@string/smoke" />

            <EditText
                android:id="@+id/mPPSmoke"
                style="@style/myProfileData" />
        </LinearLayout>

        <LinearLayout style="@style/viewProfileInnerBox">

            <TextView
                style="@style/viewProfileInnerTitle"
                android:text="@string/travel" />

            <EditText
                android:id="@+id/mPPTravel"
                style="@style/myProfileData" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout style="@style/viewProfileBox"
        android:layout_marginBottom="15dp">

        <TextView
            style="@style/viewProfileTitle"
            android:text="@string/interest" />

        <LinearLayout style="@style/viewProfileInnerBox">

            <TextView
                style="@style/viewProfileInnerTitle"
                android:text="@string/sport" />

            <EditText
                android:id="@+id/mPPSport"
                style="@style/myProfileData" />
        </LinearLayout>

        <LinearLayout style="@style/viewProfileInnerBox">

            <TextView
                style="@style/viewProfileInnerTitle"
                android:text="@string/Music_Genre" />

            <EditText
                android:id="@+id/mPPMusic"
                style="@style/myProfileData" />
        </LinearLayout>

        <LinearLayout style="@style/viewProfileInnerBox">

            <TextView
                style="@style/viewProfileInnerTitle"
                android:text="@string/food" />

            <EditText
                android:id="@+id/mPPFood"
                style="@style/myProfileData" />
        </LinearLayout>

        <LinearLayout style="@style/viewProfileInnerBox">

            <TextView
                style="@style/viewProfileInnerTitle"
                android:text="@string/movies" />

            <EditText
                android:id="@+id/mPPMovies"
                style="@style/myProfileData" />
        </LinearLayout>

        <LinearLayout style="@style/viewProfileInnerBox">

            <TextView
                style="@style/viewProfileInnerTitle"
                android:text="@string/series" />

            <EditText
                android:id="@+id/mPPSeries"
                style="@style/myProfileData" />
        </LinearLayout>

        <LinearLayout style="@style/viewProfileInnerBox">

            <TextView
                style="@style/viewProfileInnerTitle"
                android:text="@string/tvshow" />

            <EditText
                android:id="@+id/mPPTVShow"
                style="@style/myProfileData" />
        </LinearLayout>

        <LinearLayout style="@style/viewProfileInnerBox">

            <TextView
                style="@style/viewProfileInnerTitle"
                android:text="@string/color" />

            <EditText
                android:id="@+id/mPPColor"
                style="@style/myProfileData" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>