<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/viewProfileBox">

    <TextView
        style="@style/viewProfileTitle"
        android:text="@string/about" />

    <LinearLayout style="@style/viewProfileInnerBox">

        <TextView
            style="@style/viewProfileInnerTitle"
            android:text="@string/height" />

        <EditText
            android:id="@+id/mPHeight"
            style="@style/myProfileData" />
    </LinearLayout>

    <LinearLayout style="@style/viewProfileInnerBox">

        <TextView
            style="@style/viewProfileInnerTitle"
            android:text="@string/education" />

        <EditText
            android:id="@+id/mPEducation"
            style="@style/myProfileData" />
    </LinearLayout>

    <LinearLayout style="@style/viewProfileInnerBox">

        <TextView
            style="@style/viewProfileInnerTitle"
            android:text="@string/income" />

        <EditText
            android:id="@+id/mPIncome"
            style="@style/myProfileData" />
    </LinearLayout>

    <LinearLayout style="@style/viewProfileInnerBox">

        <TextView
            style="@style/viewProfileInnerTitle"
            android:text="@string/from" />

        <EditText
            android:id="@+id/mPFrom"
            style="@style/myProfileData" />
    </LinearLayout>

    <LinearLayout style="@style/viewProfileInnerBox">

        <TextView
            style="@style/viewProfileInnerTitle"
            android:text="@string/job" />

        <EditText
            android:id="@+id/mPJob"
            style="@style/myProfileData" />
    </LinearLayout>

    <LinearLayout style="@style/viewProfileInnerBox">

        <TextView
            style="@style/viewProfileInnerTitle"
            android:text="@string/motherTongue" />

        <EditText
            android:id="@+id/mPMotherTongue"
            style="@style/myProfileData" />
    </LinearLayout>

</LinearLayout>