<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="center"
    tools:context=".login.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?android:attr/actionBarSize"
        android:orientation="vertical"
        android:padding="15dp"
        android:weightSum="12">

        <TextView
            style="@style/viewParent.headerText.NoMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="26sp" />

        <TextView
            style="@style/viewParent.headerText.NoMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/nice_to_see_you_again"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:boxCornerRadiusBottomEnd="14dp"
                app:boxCornerRadiusBottomStart="14dp"
                app:boxCornerRadiusTopEnd="14dp"
                app:boxCornerRadiusTopStart="14dp">

                <EditText
                    android:id="@+id/loginEmailOrPhone"
                    style="@style/modifiedEditText"
                    android:layout_width="match_parent"
                    android:autofillHints=""
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="8dp"
                    android:hint="@string/login_email_hint"
                    android:inputType="textEmailAddress|phone"
                    android:maxLines="1"
                    tools:ignore="RtlSymmetry" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/loginViewsMargin"
                app:boxCornerRadiusBottomEnd="14dp"
                app:boxCornerRadiusBottomStart="14dp"
                app:boxCornerRadiusTopEnd="14dp"
                app:boxCornerRadiusTopStart="14dp"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/loginPassword"
                    style="@style/modifiedEditText"
                    android:autofillHints=""
                    android:background="@null"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="8dp"
                    android:hint="@string/login_password_hint"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    tools:ignore="RtlSymmetry" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>


        <TextView
            android:id="@+id/forget_password"
            style="@style/viewParent"
            android:layout_gravity="end"
            android:text="@string/forgot_password"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/newsMoreTextSize" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@android:color/white"
            android:visibility="gone" />

        <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton

            style="@style/loginButton"
            android:layout_width="124dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:gravity="center"
            android:onClick="loginBtn"
            android:text="@string/login"
            app:initialCornerAngle="29dp"
            app:spinning_bar_color="#FFF"
            app:spinning_bar_padding="6dp"
            app:spinning_bar_width="4dp" />

        <TextView
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:gravity="center_horizontal"
            android:onClick="newRegistration"
            android:text="@string/new_user_register_now"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:weightSum="12">


            <TextView
                style="@style/viewParent.headerText.NoMode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="6"
                android:text="@string/signin_with"
                android:textAlignment="center"
                android:textSize="12sp" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="vertical"
                android:padding="5dp">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:contentDescription="@string/signin_using_google"
                    android:src="@drawable/google" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="vertical"
                android:padding="5dp">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:contentDescription="@string/signup_using_fb"
                    android:src="@drawable/facebook" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"

            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/help" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/terms" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>

    <!--</ScrollView>-->